created pages blog and contacts

--- a/indest-last/insights.html
+++ b/indest-last/insights.html
@@ -72,8 +72,298 @@
    <div class="mobile"></div>
 </header>
 
-      <main class="main">
-         
+      <main class="main insights">
+         <section class="head">
+   <div class="head__background">
+      <img src="././img/headInsights.png" alt="head background">
+   </div>
+
+   <div class="head__text">
+      <h1 class="head__heading main-heading">
+         Insights
+      </h1>
+
+      <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+         Sed sed elit at leo vestibulum eleifend in in dolor. 
+         Quisque id nisl vel mauris feugiat gravida quis sit amet purus. 
+         Nunc vulputate orci vitae nisi ultricies porta. 
+         Nulla quis lacus dapibus, vulputate justo quis, dapibus eros. 
+      </p>
+   </div>
+
+   <a href="#advantage" class="head__scrollButton">
+      <p>
+         Scroll for more
+      </p>
+      <span class="icon-btn-copy-1"></span>
+   </a>
+</section>
+         <section class="section posts">
+   <div class="postsTags">
+   <ul class="postsTags__list">
+      <li class="postsTags__item">
+         <a href="#" class="postsTags__link">
+            #case studies
+         </a>
+      </li>
+      <li class="postsTags__item">
+         <a href="#" class="postsTags__link">
+            #case studies
+         </a>
+      </li>
+      <li class="postsTags__item">
+         <a href="#" class="postsTags__link postsTags__link--active">
+            #articles
+         </a>
+      </li>
+   </ul>
+</div>
+
+   <ul class="posts__list">
+      <li class="posts__item post">
+   <div class="post__photo">
+      <a href="#">
+         <img src="././img/postPhoto1.png" alt="post photo">
+      </a>
+   </div>
+
+   <div class="post__info">
+      <div class="post__head">
+         <div class="post__item post__date">
+            <a href="#">20 January 2020</a>
+         </div>
+
+         <div class="post__item post__views">
+            <a href="#">1440 views</a> 
+         </div>
+
+         <div class="post__item post__tag">
+            <a href="#">#articles</a>
+         </div>
+      </div>
+
+      <div class="post__text">
+         <h2 class="main-heading post__heading">
+            1Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+         </h2>
+
+         <div class="post__photo--mobile"></div>
+
+         <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Morbi pharetra sit amet lectus id lacinia. 
+            Nulla vel tincidunt tellus. Ut lacinia facilisis egestas. 
+            Cras quis enim sit amet risus dictum porta vel sed justo. 
+            Donec elementum libero ultricies tortor convallis viverra. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+         </p>
+
+         <a href="#" class="button post__button">
+            Read more
+         </a>
+      </div>
+   </div>
+</li>
+      <li class="posts__item post">
+   <div class="post__photo">
+      <a href="#">
+         <img src="././img/postPhoto2.png" alt="post photo">
+      </a>
+   </div>
+
+   <div class="post__info">
+      <div class="post__head">
+         <div class="post__item post__date">
+            <a href="#">20 January 2020</a>
+         </div>
+
+         <div class="post__item post__views">
+            <a href="#">1440 views</a> 
+         </div>
+
+         <div class="post__item post__tag">
+            <a href="#">#articles</a>
+         </div>
+      </div>
+
+      <div class="post__text">
+         <h2 class="main-heading post__heading">
+            2Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+         </h2>
+
+         <div class="post__photo--mobile"></div>
+
+         <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Morbi pharetra sit amet lectus id lacinia. 
+            Nulla vel tincidunt tellus. Ut lacinia facilisis egestas. 
+            Cras quis enim sit amet risus dictum porta vel sed justo. 
+            Donec elementum libero ultricies tortor convallis viverra. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+         </p>
+
+         <a href="#" class="button post__button">
+            Read more
+         </a>
+      </div>
+   </div>
+</li>
+   </ul>
+</section>
+         <section class="section contact-form">
+   <h4 class="subtext contact-form__subtext">
+      Contact
+   </h4>
+
+   <h1 class="main-heading contact-form__heading">
+      Sounds interesting?
+   </h1>
+
+   <p class="contact-form__paragraph">
+      Book a demo to learn how we can help you to generate 
+      income when  your traveler is in-destination
+   </p>
+
+   <div class="contact-form__form">
+      <form action="">
+         <div class="form__container">
+            <div class="form__top">
+               <div class="form-control">
+                  <label for="name" class="form__title">
+                     Your name
+                  </label>
+                  <div class="form__input">
+                     <input 
+                        name="name"
+                        type="text"
+                        placeholder="Your Name"
+                     >
+                  </div>
+               </div>
+
+               <div class="form-control">
+                  <label for="lastName" class="form__title">
+                     Your last name
+                  </label>
+                  <div class="form__input">
+                     <input 
+                        name="lastName"
+                        type="text"
+                        placeholder="Your Last Name"
+                     >
+                  </div>
+               </div>
+
+               <div class="form-control">
+                  <label for="email" class="form__title">
+                     Your email
+                  </label>
+                  <div class="form__input">
+                     <input 
+                        name="email"
+                        type="text"
+                        placeholder="Your Email"
+                     >
+                  </div>
+               </div>
+
+               <div class="form-control">
+                  <label for="companyName" class="form__title">
+                     Company name
+                  </label>
+                  <div class="form__input">
+                     <input 
+                        name="companyName"
+                        type="text"
+                        placeholder="Your Company Name"
+                     >
+                  </div>
+               </div>
+            </div>
+
+            <div class="form-control">
+               <label for="message" class="form__title">
+                  Message
+               </label>
+               <div class="form__input textarea">
+                  <textarea
+                     name="message"
+                     cols="30"
+                     rows="10"
+                     placeholder="Your Message"
+                  ></textarea>
+               </div>
+            </div>
+         </div>
+
+         <div class="form-control form-submit">
+            <input type="submit" class="button" value="Send">
+         </div>
+      </form>
+
+      <form action="">
+         <div class="form__container">
+            <div class="form-control">
+               <label for="name" class="form__title">
+                  Full name
+               </label>
+               <div class="form__input">
+                  <input 
+                     name="name"
+                     type="text"
+                     placeholder="Your Name"
+                  >
+               </div>
+            </div>
+
+            <div class="form-control">
+               <label for="email" class="form__title">
+                  Your email
+               </label>
+               <div class="form__input">
+                  <input 
+                     name="email"
+                     type="text"
+                     placeholder="Your Email"
+                  >
+               </div>
+            </div>
+
+            <div class="form-control">
+               <label for="companyName" class="form__title">
+                  Company name
+               </label>
+               <div class="form__input">
+                  <input 
+                     name="companyName"
+                     type="text"
+                     placeholder="Your Company Name"
+                  >
+               </div>
+            </div>
+
+            <div class="form-control">
+               <label for="message" class="form__title">
+                  Message
+               </label>
+               <div class="form__input textarea">
+                  <textarea
+                     name="message"
+                     cols="30"
+                     rows="10"
+                     placeholder="Your Message"
+                  ></textarea>
+               </div>
+            </div>
+         </div>
+
+         <div class="form-control form-submit">
+            <input type="submit" class="button" value="Send">
+         </div>
+      </form>
+   </div>
+</section>
       </main>
 
       <footer class="footer">
@@ -141,9 +431,9 @@
       </p>
    </div>
 </footer>
-      <script src="../js/jquery-3.5.1.min.js"></script>
-<script src="../js/jquery.simplePagination.min.js"></script>
-<script src="../js/slick.min.js"></script>
+      <script src="./js/jquery-3.5.1.min.js"></script>
+<script src="./js/jquery.simplePagination.min.js"></script>
+<script src="./js/slick.min.js"></script>
 <script src="./js/script.min.js"></script>
    </body>
 
