--- a/indest-last/index.html
+++ b/indest-last/index.html
@@ -72,10 +72,10 @@
    <div class="mobile"></div>
 </header>
 
-      <main class="main">
-         <section class="home head">
+      <main class="main home">
+         <section class="head">
    <div class="head__background">
-      <img src="./img/headHome.png" alt="head background">
+      <img src="././img/headHome.png" alt="head background">
    </div>
 
    <div class="head__text">
@@ -125,7 +125,7 @@
    <ul class="advantage__list">
       <li class="advantage__item">
          <div class="advantage__icon">
-            <img src="./img/planetPhone.png" alt="advantage icon">
+            <img src="././img/planetPhone.png" alt="advantage icon">
          </div>
 
          <h5 class="advantage__title">
@@ -142,7 +142,7 @@
 
       <li class="advantage__item">
          <div class="advantage__icon">
-            <img src="./img/stepUp.png" alt="advantage icon">
+            <img src="././img/stepUp.png" alt="advantage icon">
          </div>
 
          <h5 class="advantage__title">
@@ -158,7 +158,7 @@
 
       <li class="advantage__item">
          <div class="advantage__icon">
-            <img src="./img/management.png" alt="advantage icon">
+            <img src="././img/management.png" alt="advantage icon">
          </div>
 
          <h5 class="advantage__title">
@@ -178,7 +178,7 @@
    <div class="imagine__text-slider">
       <div class="imagine__text-item">
          <h1 class="main-heading imagine__heading">
-            Imagine..
+            Imagine...
          </h1>
    
          <p>
@@ -188,7 +188,7 @@
 
       <div class="imagine__text-item">
          <h1 class="main-heading imagine__heading">
-            Imagine..
+            Imagine...
          </h1>
    
          <p>
@@ -198,7 +198,7 @@
 
       <div class="imagine__text-item">
          <h1 class="main-heading imagine__heading">
-            Imagine..
+            Imagine...
          </h1>
    
          <p>
@@ -209,15 +209,15 @@
 
    <div class="imagine__photo-slider">
       <div class="imagine__photo-item">
-         <img src="./img/photo1.png" alt="imagine photo">
+         <img src="././img/photo1.png" alt="imagine photo">
       </div>
 
       <div class="imagine__photo-item">
-         <img src="./img/photo1.png" alt="imagine photo">
+         <img src="././img/photo1.png" alt="imagine photo">
       </div>
 
       <div class="imagine__photo-item">
-         <img src="./img/photo1.png" alt="imagine photo">
+         <img src="././img/photo1.png" alt="imagine photo">
       </div>
    </div>
 </section>
@@ -225,7 +225,7 @@
    <div class="home-posts__list">
       <div class="home-posts__item">
          <div class="home-posts__photo">
-            <img src="./img/homePost1.png" alt="post photo">
+            <img src="././img/homePost1.png" alt="post photo">
          </div>
          <div class="home-posts__text">
             <h1 class="home-posts__heading main-heading">
@@ -248,7 +248,7 @@
 
       <div class="home-posts__item">
          <div class="home-posts__photo">
-            <img src="./img/homePost.png" alt="post photo">
+            <img src="././img/homePost.png" alt="post photo">
          </div>
          <div class="home-posts__text">
             <h1 class="home-posts__heading main-heading">
@@ -292,7 +292,7 @@
    <div class="trust__slider">
       <div class="trust__item">
          <div class="trust__logo">
-            <img src="./img/fiverr.png" alt="trust logo">
+            <img src="././img/fiverr.png" alt="trust logo">
 
             <span class="icon-komaBottom"></span>
          </div>
@@ -320,7 +320,7 @@
 
       <div class="trust__item">
          <div class="trust__logo">
-            <img src="./img/fiverr.png" alt="trust logo">
+            <img src="././img/fiverr.png" alt="trust logo">
 
             <span class="icon-komaBottom"></span>
          </div>
@@ -348,7 +348,7 @@
 
       <div class="trust__item">
          <div class="trust__logo">
-            <img src="./img/fiverr.png" alt="trust logo">
+            <img src="././img/fiverr.png" alt="trust logo">
 
             <span class="icon-komaBottom"></span>
          </div>
@@ -376,7 +376,7 @@
 
       <div class="trust__item">
          <div class="trust__logo">
-            <img src="./img/fiverr.png" alt="trust logo">
+            <img src="././img/fiverr.png" alt="trust logo">
 
             <span class="icon-komaBottom"></span>
          </div>
@@ -404,7 +404,7 @@
 
       <div class="trust__item">
          <div class="trust__logo">
-            <img src="./img/fiverr.png" alt="trust logo">
+            <img src="././img/fiverr.png" alt="trust logo">
 
             <span class="icon-komaBottom"></span>
          </div>
@@ -432,7 +432,7 @@
 
       <div class="trust__item">
          <div class="trust__logo">
-            <img src="./img/fiverr.png" alt="trust logo">
+            <img src="././img/fiverr.png" alt="trust logo">
 
             <span class="icon-komaBottom"></span>
          </div>
@@ -468,10 +468,10 @@
       Sounds interesting?
    </h1>
 
-   <p class="contact-form__paragraph">
+   <p>
       Book a demo to learn how we can help you to generate 
       income when  your traveler is in-destination
-   </p>
+   </p> 
 
    <div class="contact-form__form">
       <form action="">
