--- a/indest-last/post.html
+++ b/indest-last/post.html
@@ -141,9 +141,9 @@
       </p>
    </div>
 </footer>
-      <script src="../js/jquery-3.5.1.min.js"></script>
-<script src="../js/jquery.simplePagination.min.js"></script>
-<script src="../js/slick.min.js"></script>
+      <script src="./js/jquery-3.5.1.min.js"></script>
+<script src="./js/jquery.simplePagination.min.js"></script>
+<script src="./js/slick.min.js"></script>
 <script src="./js/script.min.js"></script>
    </body>
 
