added pages database and howItWorks

--- a/indest-last/aboutUs.html
+++ b/indest-last/aboutUs.html
@@ -21,7 +21,7 @@
    <ul class="primary-menu nav__list">
       <li class="nav__item menu-item">
          <a
-            href="./aboutUs.html"
+            href="./howItWorks.html"
          >
             How it Works
          </a>
@@ -29,7 +29,7 @@
 
       <li class="nav__item menu-item">
          <a
-            href="products.html"
+            href="./database.html"
          >
             Database
          </a>
