--- a/indest-last/database.html
+++ b/indest-last/database.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/style.min.css">
-      <title>Insights</title>
+      <title>Database</title>
    </head>
 
    <body>
@@ -72,15 +72,15 @@
    <div class="mobile"></div>
 </header>
 
-      <main class="main insights">
+      <main class="main">
          <section class="head">
    <div class="head__background">
-      <img src="././img/headInsights.png" alt="head background">
+      <img src="././img/headDatabase.png" alt="head background">
    </div>
 
    <div class="head__text">
       <h1 class="head__heading main-heading">
-         Insights
+         Database
       </h1>
 
       <p>
@@ -99,117 +99,229 @@
       <span class="icon-btn-copy-1"></span>
    </a>
 </section>
-         <section class="section posts" id="posts">
-   <div class="postsTags">
-   <ul class="postsTags__list">
-      <li class="postsTags__item">
-         <a href="#" class="postsTags__link">
-            #case studies
-         </a>
+         <section class="section advantage products" id="advantage">
+   <h4 class="subtext advantage__subtext products__subtext">
+      Lorem ipsum dolor
+   </h4>
+
+   <h1 class="main-heading advantage__heading products__heading">
+      The most advanced 
+      <span class="color-text products__color-text">database of</span>
+      <span class="color-text products__color-text">
+         in-destination
+      </span>
+      <span class="color-text products__color-text">
+         products worldwide
+      </span>
+      with instant confirmation
+   </h1>
+
+   <div class="products__title">
+      <p>
+         Who is the inventory for?
+      </p>
+   </div>
+
+   <ul class="products__list">
+      <li class="products__item">
+         <img src="././img/airHand.png" alt="online travel agents icon">
+         <p>Online travel agents</p>
       </li>
-      <li class="postsTags__item">
-         <a href="#" class="postsTags__link">
-            #case studies
-         </a>
+      <li class="products__item">
+         <img src="././img/moreIcon.png" alt="travel agencies icon">
+         <p>Travel agencies</p>
       </li>
-      <li class="postsTags__item">
-         <a href="#" class="postsTags__link postsTags__link--active">
-            #articles
-         </a>
+      <li class="products__item">
+         <img src="././img/hotelIcon.png" alt="hotel chains icon">
+         <p>Hotel chains</p>
+      </li>
+      <li class="products__item">
+         <img src="././img/planeIcon.png" alt="airlines icon">
+         <p>Airlines</p>
       </li>
    </ul>
+
+   <div class="products__paragraph">
+      <p>
+         This database powers inDest, but we can also
+         make it available for you to use 
+         in your own channels such as online and emails.
+      </p>
+   </div>
+
+   <div class="how">
+   <h1 class="main-heading how__heading">
+      How?
+   </h1>
+
+   <p>
+      A simple API integration with one interface 
+      and booking availability in real time
+   </p>
+
+   <ul class="how__list">
+      <li class="how__item">
+         <div class="how__row">
+            <div class="how__icon">
+               <img src="././img/atrakcion.png" alt="top card icon">
+            </div>
+
+            <div class="how__title">
+               Activities/Attractions /Experiences
+            </div>
+
+            <div class="how__amount">
+               +270,000
+            </div>
+
+            <p>
+               products with instant confirmation 
+               and margins per product
+            </p>
+         </div>
+
+         <div class="how__suppliers">
+            <p>
+               Key suppliers:
+            </p>
+
+            <div class="how__suppliers__list">
+               <div class="how__suppliers__item">
+                  <img src="././img/civitatis.png" alt="civitatis logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/hotelBeds.png" alt="hotel Beds logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/viator.png" alt="viator logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/musement.png" alt="musement logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/tiqets.png" alt="tiqets logo">
+               </div>
+            </div>
+         </div>
+      </li>
+
+      <li class="how__item">
+         <div class="how__row">
+            <div class="how__icon">
+               <img src="././img/masksIcon.png" alt="top card icon">
+            </div>
+   
+            <div class="how__title">
+               Events
+            </div>
+   
+            <div class="how__amount">
+            </div>
+   
+            <p>
+               Leading global events, sports, concerts (etc.)  
+               directly from the official ticket suppliers
+            </p>
+         </div>
+
+         <div class="how__suppliers">
+            <p>
+               Key suppliers:
+            </p>
+
+            <div class="how__suppliers__list">
+               <div class="how__suppliers__item">
+                  <img src="././img/premierLeague.png" alt="premier league logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/redRocks.png" alt="redRocks logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/wembley.png" alt="wembley logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/theO2.png" alt="theO2 logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/HPJF.png" alt="HPJF logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/mesedes.png" alt="mercedes logo">
+               </div>
+            </div>
+         </div>
+      </li>
+
+      <li class="how__item">
+         <div class="how__row">
+            <div class="how__icon">
+               <img src="././img/taxi.png" alt="top card icon">
+            </div>
+   
+            <div class="how__title">
+               Transfers
+            </div>
+   
+            <div class="how__amount">
+               +4,700
+            </div>
+   
+            <p>
+               destinations in 173 countries
+               with instant confirmation
+            </p>
+         </div>
+
+         <div class="how__suppliers">
+            <p>
+               Key suppliers:
+            </p>
+
+            <div class="how__suppliers__list">
+               <div class="how__suppliers__item">
+                  <img src="././img/taxi2airport.png" alt="taxi2airport logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/taxiTender.png" alt="taxiTender logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/sixtRide.png" alt="sixtRide logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/talixo.png" alt="talixo logo">
+               </div>
+
+               <div class="how__suppliers__item">
+                  <img src="././img/holidayTaxis.png" alt="holidayTaxis logo">
+               </div>
+            </div>
+         </div>
+      </li>
+   </ul>
+
+   <div class="how__so">
+      <p>
+         All with real-time availability, 
+         instant confirmation, mobile ticketing and most are fully refundable
+      </p>
+
+      <p>
+         up to 24 hours
+      </p>
+   </div>
 </div>
-
-   <ul class="posts__list">
-      <li class="posts__item post">
-   <div class="post__photo">
-      <a href="#">
-         <img src="././img/postPhoto1.png" alt="post photo">
-      </a>
-   </div>
-
-   <div class="post__info">
-      <div class="post__head">
-         <div class="post__item post__date">
-            <a href="#">20 January 2020</a>
-         </div>
-
-         <div class="post__item post__views">
-            <a href="#">1440 views</a> 
-         </div>
-
-         <div class="post__item post__tag">
-            <a href="#">#articles</a>
-         </div>
-      </div>
-
-      <div class="post__text">
-         <h2 class="main-heading post__heading">
-            1Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-         </h2>
-
-         <div class="post__photo--mobile"></div>
-
-         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Morbi pharetra sit amet lectus id lacinia. 
-            Nulla vel tincidunt tellus. Ut lacinia facilisis egestas. 
-            Cras quis enim sit amet risus dictum porta vel sed justo. 
-            Donec elementum libero ultricies tortor convallis viverra. 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-         </p>
-
-         <a href="#" class="button post__button">
-            Read more
-         </a>
-      </div>
-   </div>
-</li>
-      <li class="posts__item post">
-   <div class="post__photo">
-      <a href="#">
-         <img src="././img/postPhoto2.png" alt="post photo">
-      </a>
-   </div>
-
-   <div class="post__info">
-      <div class="post__head">
-         <div class="post__item post__date">
-            <a href="#">20 January 2020</a>
-         </div>
-
-         <div class="post__item post__views">
-            <a href="#">1440 views</a> 
-         </div>
-
-         <div class="post__item post__tag">
-            <a href="#">#articles</a>
-         </div>
-      </div>
-
-      <div class="post__text">
-         <h2 class="main-heading post__heading">
-            2Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-         </h2>
-
-         <div class="post__photo--mobile"></div>
-
-         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Morbi pharetra sit amet lectus id lacinia. 
-            Nulla vel tincidunt tellus. Ut lacinia facilisis egestas. 
-            Cras quis enim sit amet risus dictum porta vel sed justo. 
-            Donec elementum libero ultricies tortor convallis viverra. 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-         </p>
-
-         <a href="#" class="button post__button">
-            Read more
-         </a>
-      </div>
-   </div>
-</li>
-   </ul>
 </section>
          <section class="section contact-form">
    <h4 class="subtext contact-form__subtext">
