--- a/indest-last/howItWorks.html
+++ b/indest-last/howItWorks.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/style.min.css">
-      <title>Insights</title>
+      <title>How It Works</title>
    </head>
 
    <body>
@@ -72,15 +72,15 @@
    <div class="mobile"></div>
 </header>
 
-      <main class="main insights">
+      <main class="main">
          <section class="head">
    <div class="head__background">
-      <img src="././img/headInsights.png" alt="head background">
+      <img src="././img/headHowItWorks.png" alt="head background">
    </div>
 
    <div class="head__text">
       <h1 class="head__heading main-heading">
-         Insights
+         How it Works?
       </h1>
 
       <p>
@@ -99,117 +99,196 @@
       <span class="icon-btn-copy-1"></span>
    </a>
 </section>
-         <section class="section posts" id="posts">
-   <div class="postsTags">
-   <ul class="postsTags__list">
-      <li class="postsTags__item">
-         <a href="#" class="postsTags__link">
-            #case studies
-         </a>
+         <section class="section advantage products" id="advantage">
+   <h4 class="subtext advantage__subtext products__subtext">
+      Lorem ipsum dolor
+   </h4>
+
+   <h1 class="main-heading advantage__heading products__heading">
+      Increase your revenue with our 
+      <span class="color-text products__color-text">
+         MOBILE ENGAGEMENT
+      </span> 
+      <span class="color-text products__color-text">
+         platform,
+      </span> 
+      tailor made for travel companies to sell 
+      <span class="color-text products__color-text">in-destination</span> 
+      products to their customers
+   </h1>
+
+   <div class="products__title">
+      <p>
+         Who is this platform for?
+      </p>
+   </div>
+
+   <ul class="products__list">
+      <li class="products__item">
+         <img src="././img/airHand.png" alt="online travel agents icon">
+         <p>Online travel agents</p>
       </li>
-      <li class="postsTags__item">
-         <a href="#" class="postsTags__link">
-            #case studies
-         </a>
+      <li class="products__item">
+         <img src="././img/moreIcon.png" alt="travel agencies icon">
+         <p>Travel agencies</p>
       </li>
-      <li class="postsTags__item">
-         <a href="#" class="postsTags__link postsTags__link--active">
-            #articles
-         </a>
+      <li class="products__item">
+         <img src="././img/hotelIcon.png" alt="hotel chains icon">
+         <p>Hotel chains</p>
+      </li>
+      <li class="products__item">
+         <img src="././img/planeIcon.png" alt="airlines icon">
+         <p>Airlines</p>
+      </li>
+      <li class="products__item">
+         <img src="././img/bagStar.png" alt="calendar icon">
+         <p>Events/conferences </p>
       </li>
    </ul>
-</div>
+</section>
+         <section class="section platform">
+   <div class="platform__card">
+      <h1 class="main-heading platform__heading">
+         What is the inDest platform?
+      </h1>
 
-   <ul class="posts__list">
-      <li class="posts__item post">
-   <div class="post__photo">
-      <a href="#">
-         <img src="././img/postPhoto1.png" alt="post photo">
-      </a>
+      <ul class="platform__list">
+         <li class="platform__item">
+            <img src="././img/phoneHend.png" alt="tech icon">
+
+            <div class="platform__title">
+               <p>
+                  Tech
+               </p>
+            </div>
+
+            <div class="platform__paragraph">
+               <p>
+                  A unique 
+                  <strong>MOBILE ENGAGEMENT</strong> 
+                  platform 
+                  based on 
+                  <strong>SMS/CHATBOT</strong> 
+               </p>
+            </div>
+         </li>
+
+         <li class="platform__item">
+            <img src="././img/ideaHand.png" alt="database icon">
+
+            <div class="platform__title">
+               <p>
+                  Database
+               </p>
+            </div>
+
+            <div class="platform__paragraph">
+               <p>
+                  One database 
+                  <strong>for all in-destination products:</strong>
+                  activities, attractions, events, experiences and transfers
+               </p>
+            </div>
+         </li>
+      </ul>
+   </div>
+</section>
+         <section class="section steps">
+   <div class="steps__row">
+      <div class="steps__text steps__column">
+         <h1 class="main-heading steps__heading">
+            How does it work?
+         </h1>
+
+         <ul class="steps__list">
+            <li class="steps__item">
+               <div class="steps__number">
+                  <p>1</p>
+                  <p>Step</p>
+               </div>
+               <p>You supply us with the traveler data</p>
+            </li>
+            <li class="steps__item">
+               <div class="steps__number">
+                  <p>2</p>
+                  <p>Step</p>
+               </div>
+               <p>The traveler receives an sms when in-destination</p>
+            </li>
+            <li class="steps__item">
+               <div class="steps__number">
+                  <p>3</p>
+                  <p>Step</p>
+               </div>
+               <p>Our mobile chatbot communicates with the traveler</p>
+            </li>
+         </ul>
+
+         <span class="arrow-bottom"></span>
+      </div>
+
+      <div class="steps__photo__list steps__column">
+         <div class="steps__photo__item">
+            <img src="././img/phone_1.png" alt="phone photo">
+            <span></span>
+         </div>
+         <div class="steps__photo__item">
+            <img src="././img/phone_2.png" alt="phone photo">
+            <span></span>
+         </div>
+         <div class="steps__photo__item">
+            <img src="././img/phone_3.png" alt="phone photo">
+            <span></span>
+         </div>
+      </div>
    </div>
 
-   <div class="post__info">
-      <div class="post__head">
-         <div class="post__item post__date">
-            <a href="#">20 January 2020</a>
-         </div>
+   <div class="steps__row">
+      <span class="arrow-top"></span>
 
-         <div class="post__item post__views">
-            <a href="#">1440 views</a> 
+      <div class="steps__photo__list steps__column">
+         <div class="steps__photo__item">
+            <img src="././img/phone_4.png" alt="phone photo">
+            <span></span>
          </div>
-
-         <div class="post__item post__tag">
-            <a href="#">#articles</a>
+         <div class="steps__photo__item">
+            <img src="././img/phone_5.png" alt="phone photo">
+            <span></span>
+         </div>
+         <div class="steps__photo__item">
+            <img src="././img/phone_6.png" alt="phone photo">
+            <span></span>
          </div>
       </div>
 
-      <div class="post__text">
-         <h2 class="main-heading post__heading">
-            1Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-         </h2>
-
-         <div class="post__photo--mobile"></div>
-
-         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Morbi pharetra sit amet lectus id lacinia. 
-            Nulla vel tincidunt tellus. Ut lacinia facilisis egestas. 
-            Cras quis enim sit amet risus dictum porta vel sed justo. 
-            Donec elementum libero ultricies tortor convallis viverra. 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-         </p>
-
-         <a href="#" class="button post__button">
-            Read more
-         </a>
+      <div class="steps__text steps__column">
+         <ul class="steps__list">
+            <li class="steps__item">
+               <div class="steps__number">
+                  <p>4</p>
+                  <p>Step</p>
+               </div>
+               <p>
+                  The chatbot offers the traveler personalized selections of products with instant confirmation
+               </p>
+            </li>
+            <li class="steps__item">
+               <div class="steps__number">
+                  <p>5</p>
+                  <p>Step</p>
+               </div>
+               <p>The traveler books their product </p>
+            </li>
+            <li class="steps__item">
+               <div class="steps__number">
+                  <p>6</p>
+                  <p>Step</p>
+               </div>
+               <p>You receive a revenue share from inDest</p>
+            </li>
+         </ul>
       </div>
    </div>
-</li>
-      <li class="posts__item post">
-   <div class="post__photo">
-      <a href="#">
-         <img src="././img/postPhoto2.png" alt="post photo">
-      </a>
-   </div>
-
-   <div class="post__info">
-      <div class="post__head">
-         <div class="post__item post__date">
-            <a href="#">20 January 2020</a>
-         </div>
-
-         <div class="post__item post__views">
-            <a href="#">1440 views</a> 
-         </div>
-
-         <div class="post__item post__tag">
-            <a href="#">#articles</a>
-         </div>
-      </div>
-
-      <div class="post__text">
-         <h2 class="main-heading post__heading">
-            2Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-         </h2>
-
-         <div class="post__photo--mobile"></div>
-
-         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Morbi pharetra sit amet lectus id lacinia. 
-            Nulla vel tincidunt tellus. Ut lacinia facilisis egestas. 
-            Cras quis enim sit amet risus dictum porta vel sed justo. 
-            Donec elementum libero ultricies tortor convallis viverra. 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-         </p>
-
-         <a href="#" class="button post__button">
-            Read more
-         </a>
-      </div>
-   </div>
-</li>
-   </ul>
 </section>
          <section class="section contact-form">
    <h4 class="subtext contact-form__subtext">
