--- a/indest-last/post.html
+++ b/indest-last/post.html
@@ -10,7 +10,7 @@
 
    <body>
       <header>
-   <div class="header">
+   <div class="header header--white">
       <div class="header__logo">
          <a href="./index.html">
             <span class="icon-logo logo"></span>
@@ -21,7 +21,7 @@
    <ul class="primary-menu nav__list">
       <li class="nav__item menu-item">
          <a
-            href="./aboutUs.html"
+            href="./howItWorks.html"
          >
             How it Works
          </a>
@@ -29,7 +29,7 @@
 
       <li class="nav__item menu-item">
          <a
-            href="products.html"
+            href="./database.html"
          >
             Database
          </a>
@@ -73,7 +73,136 @@
 </header>
 
       <main class="main">
-         
+         <section class="section onePost">
+   <div class="onePost__head">
+      <h1 class="onePost__heading main-heading">
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      </h1>
+   
+      <div class="onePost__info">
+         <div class="onePost__item onePost__date">
+            <a href="#">20 January 2020</a>
+         </div>
+   
+         <div class="onePost__item onePost__views">
+            <a href="#">1440 views</a> 
+         </div>
+   
+         <div class="onePost__item onePost__tag">
+            <a href="#">#articles</a>
+         </div>
+      </div>
+   </div>
+
+   <div class="onePost__content">
+      <img src="././img/postMainPhoto.png" alt="onePost photo">
+
+      <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+         Sed venenatis molestie diam at feugiat.
+         Nullam ut dignissim tortor. 
+         Maecenas imperdiet suscipit sapien, sed auctor elit.
+         Nam ullamcorper non mi eu mollis. 
+         Maecenas consectetur nulla nec nisl varius commodo. 
+         Nulla porttitor nunc non nibh pellentesque, nec efficitur nunc bibendum. 
+         Proin vestibulum leo sit amet lorem suscipit consectetur. 
+         Donec dictum felis semper neque mattis tempor. 
+         Donec pulvinar id nunc non mattis. Phasellus quis felis neque. 
+         Sed non mauris fringilla, hendrerit ante nec, dignissim mi. 
+         Duis felis mauris, feugiat sed suscipit ut, bibendum vel odio. 
+         Mauris urna elit, rhoncus quis mauris sodales, scelerisque aliquam risus. 
+         Curabitur quis elementum nunc. Cras porttitor dolor nec aliquam finibus.
+      </p>
+
+      <p>
+         Aliquam placerat imperdiet enim, sit amet hendrerit nunc volutpat non. 
+         Cras varius purus sed nisl placerat, a euismod nunc accumsan. 
+         Suspendisse pulvinar odio tellus, nec pellentesque augue feugiat tincidunt. 
+         Integer ornare dui ac ipsum mattis eleifend. 
+         Pellentesque dapibus, quam et tincidunt suscipit, 
+         lectus tortor lobortis odio, eget commodo nulla risus nec ante. 
+         Proin nec enim vitae nulla sollicitudin tincidunt. 
+         In dignissim dapibus risus eget sodales. 
+         Donec id nisi eu odio tincidunt egestas. 
+         Nullam imperdiet massa sit amet dignissim suscipit. 
+         Donec tempus augue id justo molestie ullamcorper. 
+         Nunc malesuada augue in mi mattis iaculis. 
+         Nam rutrum elit id urna posuere, a lobortis mauris suscipit.
+      </p>
+
+      <img src="././img/postContentPhoto.png" alt="onePost content photo">
+
+      <p>
+         Nam ullamcorper non mi eu mollis. 
+         Maecenas consectetur nulla nec nisl varius commodo. 
+         Nulla porttitor nunc non nibh pellentesque, nec efficitur nunc bibendum. 
+         Proin vestibulum leo sit amet lorem suscipit consectetur. 
+         Donec dictum felis semper neque mattis tempor. 
+         Donec pulvinar id nunc non mattis. Phasellus quis felis neque. 
+         Sed non mauris fringilla, hendrerit ante nec, dignissim mi. 
+      </p>
+
+      <h3>
+         Nam ullamcorper non mi eu mollis. 
+      </h3>
+
+      <p>
+         Nam ullamcorper non mi eu mollis. 
+         Maecenas consectetur nulla nec nisl varius commodo. 
+         Nulla porttitor nunc non nibh pellentesque, nec efficitur nunc bibendum. 
+         Proin vestibulum leo sit amet lorem suscipit consectetur. 
+         Donec dictum felis semper neque mattis tempor. 
+         Donec pulvinar id nunc non mattis. Phasellus quis felis neque. 
+         Sed non mauris fringilla, hendrerit ante nec, dignissim mi. 
+         Duis felis mauris, feugiat sed suscipit ut, bibendum vel odio. 
+         Mauris urna elit, rhoncus quis mauris sodales, scelerisque aliquam risus. 
+         Curabitur quis elementum nunc. Cras porttitor dolor nec aliquam finibus.
+      </p>
+
+      <h2>
+         “Lorem ipsum dolor sit amet, consectetur adipiscing elit.”
+      </h2>
+
+      <span>John Dou</span>
+
+      <p>
+         Nam ullamcorper non mi eu mollis. 
+         Maecenas consectetur nulla nec nisl varius commodo. 
+         Nulla porttitor nunc non nibh pellentesque, nec efficitur nunc bibendum. 
+         Proin vestibulum leo sit amet lorem suscipit consectetur. 
+         Donec dictum felis semper neque mattis tempor. 
+         Donec pulvinar id nunc non mattis. Phasellus quis felis neque. 
+         Sed non mauris fringilla, hendrerit ante nec, dignissim mi. 
+         Duis felis mauris, feugiat sed suscipit ut, bibendum vel odio. 
+         Mauris urna elit, rhoncus quis mauris sodales, scelerisque aliquam risus. 
+         Curabitur quis elementum nunc. Cras porttitor dolor nec aliquam finibus.
+      </p>
+   </div>
+</section>
+         <section class="section onePost__form">
+   <h1 class="heading main-heading">
+      Sign Up for our <span class="color-text">newsletter</span>
+   </h1>
+
+   <form action="">
+      <div class="form-control">
+         <label for="email" class="form__title">
+            Email
+         </label>
+         <div class="form__input">
+            <input 
+               name="email"
+               type="email"
+               placeholder="Your Email"
+            >
+         </div>
+      </div>
+
+      <div class="form-control form-submit">
+         <input type="submit" class="button" value="Subscribe">
+      </div>
+   </form>
+</section>
       </main>
 
       <footer class="footer">
