--- a/plit/index.html
+++ b/plit/index.html
@@ -133,7 +133,7 @@
          <div class="header__bottom">
             <div class="header__logo">
                <a href="#">
-                  <img src="../img/logo.png" alt="logo">
+                  <img src="./img/logo.png" alt="logo">
                </a>
             </div>
 
@@ -213,23 +213,23 @@
 
                   <div class="header__contacts">
                      <div class="address header__contacts-item">
-                        <img src="../img/Location.svg" alt="address marker">
+                        <img src="./img/Location.svg" alt="address marker">
                         <div>
                            <p>вул. Зелена, 149</p>
                            <p>м. Львів, Україна, 79035</p>
                         </div>
-                        <img src="../img/icon-arrow.svg" alt="arrow bottom">
+                        <img src="./img/icon-arrow.svg" alt="arrow bottom">
                      </div>
 
                      <div class="work-hours header__contacts-item">
-                        <img src="../img/clock.svg" alt="clock icon">
+                        <img src="./img/clock.svg" alt="clock icon">
                         <p>
                            Пн. - Пт. 09:00 — 18:00
                         </p>
                      </div>
 
                      <div class="email header__contacts-item">
-                        <img src="../img/mail.svg" alt="email icon">
+                        <img src="./img/mail.svg" alt="email icon">
                         <a href="mailto:office@plit.ua">
                            office@plit.ua
                         </a>
@@ -248,7 +248,7 @@
 
             <div class="header__cart">
                <a href="#" class="cart-link">
-                  <img src="../img/cart.svg" alt="cart icon">
+                  <img src="./img/cart.svg" alt="cart icon">
                   <span class="menu_wrap_bottom_cart_span">0</span>
                </a>
 
@@ -272,13 +272,13 @@
          </div>
 
          <div class="mobile__search-btn">
-            <img src="../img/search-black.svg" alt="search icon">
+            <img src="./img/search-black.svg" alt="search icon">
          </div>
 
          <div class="mobile__logo"></div>
 
          <div class="mobile__phone-btn">
-            <img src="../img/phone.svg" alt="phone icon">
+            <img src="./img/phone.svg" alt="phone icon">
          </div>
 
          <div class="mobile__cart-btn"></div>
@@ -810,7 +810,7 @@
       <div class="row">
          <div class="footer__column">
             <a href="#" class="footer__logo">
-               <img src="../img/logo.png" alt="footer logo">
+               <img src="./img/logo.png" alt="footer logo">
             </a>
 
             <div class="footer__description">
@@ -856,16 +856,16 @@
             </ul>
 
             <div class="footer__media">
-               <a href="#"><img src="../img/facebook.svg" alt="facebook icon"></a>
-               <a href="#"><img src="../img/messenger.svg" alt="messenger icon"></a>
-               <a href="#"><img src="../img/telegram.svg" alt="telegram icon"></a>
-               <a href="#"><img src="../img/whatsapp.svg" alt="wats up icon"></a>
-               <a href="#"><img src="../img/viber.svg" alt="viber icon"></a>
+               <a href="#"><img src="./img/facebook.svg" alt="facebook icon"></a>
+               <a href="#"><img src="./img/messenger.svg" alt="messenger icon"></a>
+               <a href="#"><img src="./img/telegram.svg" alt="telegram icon"></a>
+               <a href="#"><img src="./img/whatsapp.svg" alt="wats up icon"></a>
+               <a href="#"><img src="./img/viber.svg" alt="viber icon"></a>
             </div>
          </div>
 
          <div class="footer__background">
-            <img src="../img/bg-lines.svg" alt="background image">
+            <img src="./img/bg-lines.svg" alt="background image">
          </div>
       </div>
    </div>
@@ -874,9 +874,9 @@
       ©ТзОВ ВФК «Пліт», 1997 — 2021
    </div>
 </footer>
-      <script src="../js/jquery-3.5.1.min.js"></script>
-<script src="../js/jquery.simplePagination.min.js"></script>
-<script src="../js/slick.min.js"></script>
+      <script src="./js/jquery-3.5.1.min.js"></script>
+<script src="./js/jquery.simplePagination.min.js"></script>
+<script src="./js/slick.min.js"></script>
 <script src="./js/script.min.js"></script>
    </body>
 
